tests/valid/visibility_internal/internal_access_same_prototype_method.pts
import Io;

prototype Core {
    internal int state = 0;

    function bump() : int {
        self.state = self.state + 1;
        return self.state;
    }
}

function main() : void {
    Core c = Core.clone();
    int a = c.bump();
    int b = c.bump();
    Io.printLine((a + b).toString());
}
