tests/invalid/type/group_descriptor_as_expression.pts
int group Color {
  Red = 1
}

function main() : void {
  int a = Color;
}
